fixed header overflowing screen
the issue was caused by AOS, because hamburger menu in the header is set to the very right, and when I had some elements to (fade-left) that means they were in a more right position which was in this case out of the screen, so the page was overflowing the screen, and since the hamburger menu is in the very right, it overflowed as well

--- a/public/style.css
+++ b/public/style.css
@@ -2504,8 +2504,8 @@ body[dir="rtl"] .checkbox:checked,
   margin-top: 0.5rem;
 }
 
-.mt-40{
-  margin-top: 10rem;
+.mt-56{
+  margin-top: 14rem;
 }
 
 .mr-14{
@@ -2540,16 +2540,16 @@ body[dir="rtl"] .checkbox:checked,
   margin-top: -3.5rem;
 }
 
-.mt-64{
-  margin-top: 16rem;
+.mb-24{
+  margin-bottom: 6rem;
 }
 
-.mt-60{
-  margin-top: 15rem;
+.mb-20{
+  margin-bottom: 5rem;
 }
 
-.mt-56{
-  margin-top: 14rem;
+.mt-0{
+  margin-top: 0px;
 }
 
 .inline{
@@ -2634,6 +2634,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .w-4\/6{
   width: 66.666667%;
+}
+
+.w-screen{
+  width: 100vw;
 }
 
 .max-w-sm{
@@ -2787,6 +2791,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .overflow-x-hidden{
   overflow-x: hidden;
+}
+
+.overflow-y-hidden{
+  overflow-y: hidden;
 }
 
 .rounded-lg{
@@ -2981,6 +2989,41 @@ body[dir="rtl"] .checkbox:checked,
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-9{
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .pt-4{
@@ -3518,6 +3561,18 @@ body[dir="rtl"] .checkbox:checked,
     margin-left: 1.25rem;
   }
 
+  .md\:mt-12{
+    margin-top: 3rem;
+  }
+
+  .md\:mt-9{
+    margin-top: 2.25rem;
+  }
+
+  .md\:mt-5{
+    margin-top: 1.25rem;
+  }
+
   .md\:flex{
     display: flex;
   }
@@ -3556,6 +3611,11 @@ body[dir="rtl"] .checkbox:checked,
 
   .md\:gap-0{
     gap: 0px;
+  }
+
+  .md\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .md\:pr-10{
